<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurfaceContainer"
        tools:paddingVertical="0dp"
        >

        <LinearLayout
            android:id="@+id/topButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <Button
                android:id="@+id/btnUrlConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configure_by_url"
                />

            <Button
                android:id="@+id/btnQrConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configure_by_qr"
                />

            <Button
                android:id="@+id/btnCredConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configure_by_credentials"
                />

            <Button
                android:id="@+id/btnApiKeyConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configure_by_api_key"
                />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWorkflows"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/colorSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topButtonsLayout"
            app:layout_constraintBottom_toTopOf="@id/bottomButtonsLayout"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_workflow"
            tools:itemCount="10"
            />

        <LinearLayout
            android:id="@+id/bottomButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <Button
                android:id="@+id/btnStartWorkflow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_workflow"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        tools:visibility="gone"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:alpha="0.5"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingVertical="24dp"
            android:paddingHorizontal="36dp"
            android:background="@drawable/bg_rounded_corners_medium"
            android:backgroundTint="?attr/colorSurfaceContainerLowest"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tvProgressMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@string/preparing_workflow"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
