<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:background="@drawable/bg_rounded_corners_large"
    android:backgroundTint="?attr/colorSurfaceContainerHighest"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/tvErrorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:text="@string/error"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvErrorTitle"
        app:layout_constraintBottom_toTopOf="@id/buttonsLayout"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_max="500dp"
        >

        <TextView
            android:id="@+id/tvErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody2"
            android:alpha="0.9"
            android:gravity="center"
            tools:text="com.regula.idv.api.exception.ConfigureException: CE:1-CO:1: Response: DetectorResponse{code=6, data length=-1, response length=143, response='{errorCode:6,errorDetails:executeCommand failed: {libcode:6,what:Could not resolve host: ...},errorText:HttpLibException}'}"
            />

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/btnCopy"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            />

        <Button
            android:id="@+id/btnDismiss"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
